Added home page, branch complete

--- a/index.html
+++ b/index.html
@@ -4,4 +4,43 @@
 </head>
 <body>
   <img src="assets/thumbnail_Kell_badge_photo.jpg" width="100" />
+  <h3>Summary</h3>
+  <p>
+    I am a software developer for the United States Space Force. I am currently
+    doing a web development course as a refresher and to pick up some new
+    tricks.
+  </p>
+  <h3>Education</h3>
+  <ul>
+    <li>
+      A.A.S. Electronic systems Technology (Community College of the Air Force)
+    </li>
+    <li>B.S. Environmental Science (Southern New Hampshire University)</li>
+    <li>B.S. Computer Science (Western Governors University)</li>
+    <li>
+      M.S. Cybersecurity and Information Assurance (Western Governors
+      University)
+    </li>
+  </ul>
+  <h3>Work Experience</h3>
+  <ul>
+    <li>Network Technician</li>
+    <li>IT project management</li>
+    <li>Software Engineering</li>
+    <li>AI/ML fellow at Intel Corp.</li>
+  </ul>
+  <h3>Skills</h3>
+  <ul>
+    <li>Web Development</li>
+    <li>Python Scripting</li>
+    <li>Data Science</li>
+    <li>AI/ML</li>
+    <li>Project management</li>
+  </ul>
+  <h3>Awards</h3>
+  <ul>
+    <li>Information Dominance</li>
+    <li>NCO of the Quarter</li>
+    <li>Innovation award</li>
+  </ul>
 </body>
