Added about page and linked to home

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>My Resume</title>
 </head>
 <body>
-  <img src="assets/thumbnail_Kell_badge_photo.jpg" width="100" />
+  <img src="assets/picture_of_me.png" width="100" />
   <h3>Summary</h3>
   <p>
     I am a software developer for the United States Space Force. I am currently
@@ -43,4 +43,5 @@
     <li>NCO of the Quarter</li>
     <li>Innovation award</li>
   </ul>
+  <a href="project/about.html" style="font-size: 20px">About Me</a>
 </body>
