done with project... for now

--- a/index.html
+++ b/index.html
@@ -44,4 +44,5 @@
     <li>Innovation award</li>
   </ul>
   <a href="project/about.html" style="font-size: 20px">About Me</a>
+  <a href="project/contact.html" style="font-size: 20px">Contact Me</a>
 </body>
